# safari-axum-graphql-async

./: .env  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20230612_004705_create_users.rs
src/: app_state.rs  config.rs  database.rs  entities.rs  graphql.rs  handlers.rs  main.rs
src/entities/: company.rs  prelude.rs  user.rs
src/graphql/: schema.rs
src/graphql/schema/: company.rs  user.rs
