[workspace]
members = [".", "migration"]

[package]
name = "safari"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.10", features = ["chrono"] }
async-graphql-axum = "5.0.10"
axum = "0.6.18"
chrono = "0.4.26"
dataloader = "0.16.0"
dotenvy = "0.15.7"
log = "0.4.19"
sea-orm = { version = "0.11.3", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "debug-print",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96" }
sqlx = "0.6.3"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
